IngressResource/monitoring.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: monitoring.wrrr.online
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
      - path: /prometheus
        backend:
          serviceName: prometheus
          servicePort: 9090
