IngressResource/traefik-dashboard.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kube-system
  labels:
    app: traefik-traefik
    chart: traefik-1.3.0
    heritage: Tiller
    release: traefik
  name: traefik-traefik-dashboard
spec:
  rules:
  - host: marshall-peter.wrrr.online
    http:
      paths:
      - backend:
          serviceName: traefik-traefik-dashboard
          servicePort: 80
